# hybrid-programming

./: README.md
clang-format/: .clang-format  Readme.md  align.sh
cpp-multithreading/: 01-hello-world.cpp  03-basic-multithreading.cpp  05-shared-data-atomic.cpp  05-shared-data.cpp  06-mutexes.cpp  07-func-args.cpp  07-lock-guard.cpp  08-callable-objects.cpp  08-thread-callable-objects.cpp  09-calculating-pi.cpp  10-promises-futures.cpp  11-promises-exceptions.cpp  12-packaged-tasks.cpp  13-wait-for-threads.cpp  14-cond-variable.cpp  15-check-cond-variable.cpp  16-blocking-queues.cpp  17-cont-thread-safety.cpp  18-producer-consumer.cpp  19-final-blocking-queue.cpp  20-async-async.cpp  20-async-deferred.cpp  21-hw-concurrency.cpp  22-lots-of-threads.cpp  23-thread-pool.cpp  24-bw-cores.cpp  25-timing-code.cpp  26-thread-pool.cpp  circular_buffer.hpp  multithreading.md
cpp20-masterclass/sec-17/03-multiple-files/: CMakeLists.txt  compare.cpp  compare.h  main.cpp  operations.cpp  operations.h  some_other_file.cpp
design-patterns-cpp/: Readme.md
multithreading-modern-cpp/: 01-auto-loop.cpp  01-chrono.cpp  01-initialization.cpp  01-loop.cpp  01-nullptr.cpp  01-range-for-loop.cpp  02-capture-reference.cpp  02-lambda-syntax.cpp  02-predicate-capture.cpp  02-predicate.cpp  03-pass-by-move-1.cpp  03-pass-by-reference.cpp  03-pass-by-value.cpp  04-delete-default.cpp  04-rvalue-lvalue.cpp  05-capture-by-move.cpp  05-lambda-local.cpp  05-random.cpp  05-unique-ptr.cpp  06-launching-thread.cpp  07-thread-func-with-args.cpp  08-system-thread-interface.cpp  09-cpp-thread-class.cpp  (+50 more)
(+384 files in other folders)
